<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item android:id="@+id/connect" android:icon="@android:drawable/ic_menu_send"
            android:title="@string/Connecttext" />
        <item android:id="@+id/readReg" android:icon="@android:drawable/ic_input_get"
            android:title="@string/ReadRegtext" />
        <item android:id="@+id/writeReg" android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/WriteRegtext" />
        <item android:id="@+id/siteSurvey" android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/SiteSurveyText" />
        <item android:id="@+id/vibTemp" android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/vibTempText" />
     </group>

    <group android:checkableBehavior="none">
        <item android:id="@+id/settings" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

</menu>