<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tvLinearLayoutheader1">

    <TextView
        android:id="@+id/tv_Node"
        android:text="@string/Node"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor1"
        android:text="@string/tv1"
        android:textStyle="bold"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor2"
        android:layout_width="42dp"
        android:text="@string/tv2"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor3"
        android:layout_width="42dp"
        android:text="@string/tv3"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor4"
        android:layout_width="42dp"
        android:text="@string/tv4"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor5"
        android:layout_width="42dp"
        android:text="@string/tv5"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor6"
        android:layout_width="42dp"
        android:text="@string/tv6"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor7"
        android:layout_width="42dp"
        android:text="@string/tv7"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor8"
        android:layout_width="42dp"
        android:text="@string/tv8"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor9"
        android:layout_width="42dp"
        android:text="@string/tv9"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor10"
        android:layout_width="42dp"
        android:text="@string/tv10"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor11"
        android:layout_width="42dp"
        android:text="@string/tv11"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor12"
        android:layout_width="42dp"
        android:text="@string/tv12"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor13"
        android:layout_width="42dp"
        android:text="@string/tv13"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor14"
        android:layout_width="42dp"
        android:text="@string/tv14"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor15"
        android:layout_width="42dp"
        android:text="@string/tv15"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_valor16"
        android:layout_width="42dp"
        android:text="@string/tv16"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

</LinearLayout>


