<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="19200"
        android:entries="@array/baud_rate"
        android:entryValues="@array/baud_rate"
        android:key="baud_rate"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_baud_rate" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/parity"
        android:entryValues="@array/parity_int"
        android:key="parity"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_parity" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="1"
        android:inputType="number"
        android:key="modbus_slave_id"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_modbus_slave_id" />

    <EditTextPreference
        android:defaultValue="10"
        android:inputType="number"
        android:key="number_retries"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_number_retries" />

    <EditTextPreference
        android:defaultValue="2000"
        android:inputType="number"
        android:key="modbus_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_modbus_timeout" />




</PreferenceScreen>
